--- a/sass/components/modal/_modal-window.scss
+++ b/sass/components/modal/_modal-window.scss
@@ -57,3 +57,15 @@
     fill: $color-accent;
   }
 }
+
+.modal__field {
+  margin-bottom: 28px;
+}
+
+.modal__comments-field {
+  margin-bottom: 20px;
+}
+
+.modal__checkbox {
+  margin-bottom: 30px;
+}
