--- a/sass/utils/_button.scss
+++ b/sass/utils/_button.scss
@@ -1,5 +1,8 @@
 .button {
-  margin-bottom: 0;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
   min-width: 200px;
   height: 50px;
   border-radius: 4px;
