--- a/sass/utils/_social-links.scss
+++ b/sass/utils/_social-links.scss
@@ -34,3 +34,12 @@
   text-transform: uppercase;
   color: $color-text-white;
 }
+
+.socials__link--basement {
+  background-color: rgba(255, 255, 255, 0.1);
+}
+
+.socials__icon--basement {
+  fill: $color-text-white;
+}
+
