update sass files

--- a/sass/components/main-page/_benefits-section.scss
+++ b/sass/components/main-page/_benefits-section.scss
@@ -1,40 +1,57 @@
 .benefits {
   @extend %section;
-}
 
-.benefits__item {
-  @include flex-based(4, 30px);
-}
+  .benefits__item {
+    &:not(:last-child) {
+      margin-bottom: 30px;
+    }
 
-.benefits__logo {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-bottom: 30px;
-  border-radius: 4px;
-  height: 120px;
-  width: 100%;
-  background-color: $color-background-white;
+    @media screen and (min-width: 768px) {
+      @include flex-based(2, 30px);
+    }
 
-  transition: box-shadow $anim;
-
-  .benefits__item:hover &,
-  .benefits__item:focus & {
-    box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+    @media screen and (min-width: 1200px) {
+      @include flex-based(4, 30px);
+    }
   }
-}
 
-.benefits__subtitle {
-  margin-bottom: 10px;
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.14;
-  text-transform: uppercase;
-}
+  &__logo {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 30px;
+    border-radius: 4px;
+    height: 120px;
+    width: 100%;
+    background-color: $color-background-white;
 
-.benefits__text {
-  color: $color-text-secondary;
+    transition: box-shadow $anim;
 
-  font-size: 14px;
-  line-height: 1.71;
+    .benefits__item:hover &,
+    .benefits__item:focus & {
+      box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+    }
+
+    @media screen and (min-width: 1200px) {
+    }
+  }
+
+  &__subtitle {
+    margin-bottom: 10px;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    text-transform: uppercase;
+
+    @media screen and (max-width: 767px) {
+      text-align: center;
+    }
+  }
+
+  &__text {
+    color: $color-text-secondary;
+
+    font-size: 14px;
+    line-height: 1.714;
+  }
 }
