--- a/sass/components/page-header/_page-header.scss
+++ b/sass/components/page-header/_page-header.scss
@@ -1,8 +1,31 @@
 .page-header {
-  border: 1px solid #ececec;
-}
+  border-bottom: 1px solid #ececec;
 
-.page-header__container {
-  @extend .container;
-  display: flex;
+  &__container {
+    @extend .container;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+    @media screen and (max-width: 767px) {
+      position: relative;
+    }
+  }
+
+  &__logo {
+    padding-top: 16px;
+    padding-bottom: 16px;
+
+    @media screen and (min-width: 1200px) {
+      margin-right: 93px;
+    }
+
+    @media screen and (min-width: 768px) {
+      margin-right: 88px;
+    }
+  }
+
+  &__menu-socials {
+    margin-top: 64px;
+  }
 }
