--- a/sass/components/main-page/_team-section.scss
+++ b/sass/components/main-page/_team-section.scss
@@ -1,37 +1,55 @@
 .team {
   @extend %section;
   background-color: $color-background-white;
-}
 
-.team__title {
-  @extend %section-title;
-}
+  &__title {
+    @extend %section-title;
+  }
 
-.team__item {
-  @include flex-based(4, 30px);
-  padding-bottom: 30px;
-  background-color: $color-text-white;
-  text-align: center;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 2px 1px rgba(0, 0, 0, 0.2);
-  border-radius: 0px 0px 4px 4px;
-}
+  &__item {
+    padding-bottom: 24px;
+    background-color: $color-text-white;
+    text-align: center;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+      0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 0px 0px 4px 4px;
 
-.team__img {
-  margin-bottom: 30px;
-}
+    @media screen and (max-width: 767px) {
+      &:not(:last-child) {
+        margin-bottom: 30px;
+      }
+    }
 
-.team__name {
-  margin-bottom: 10px;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.19;
-}
+    @media screen and (min-width: 768px) {
+      @include flex-based(2, 30px);
+    }
 
-.team__position {
-  margin-bottom: 16px;
-  color: $color-text-secondary;
+    @media screen and (min-width: 1200px) {
+      @include flex-based(4, 30px);
+      padding-bottom: 30px;
+    }
+  }
 
-  font-size: 16px;
-  line-height: 1.19;
+  &__img {
+    margin-bottom: 30px;
+
+    @media screen and (min-width: 480px) {
+      width: 450px;
+    }
+  }
+
+  &__name {
+    margin-bottom: 10px;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.188;
+  }
+
+  &__position {
+    margin-bottom: 16px;
+    color: $color-text-secondary;
+
+    font-size: 16px;
+    line-height: 1.188;
+  }
 }
