--- a/sass/components/main-page/_work-section.scss
+++ b/sass/components/main-page/_work-section.scss
@@ -1,36 +1,40 @@
 .work {
   @extend %section;
   padding-top: 0;
-}
 
-.work__title {
-  @extend %section-title;
-}
+  @media screen and (max-width: 1199px) {
+    display: none;
+  }
 
-.work__item {
-  position: relative;
-  @include flex-based(3, 30px);
-}
+  &__title {
+    @extend %section-title;
+  }
 
-.work__wrapper {
-  position: absolute;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  bottom: 0;
-  left: 0;
-  height: 70px;
-  width: 100%;
+  &__item {
+    position: relative;
+    @include flex-based(3, 30px);
+  }
 
-  background-color: rgba(47, 48, 58, 0.8);
-}
+  &__wrapper {
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    bottom: 0;
+    left: 0;
+    height: 70px;
+    width: 100%;
 
-.work__text {
-  color: $color-text-white;
+    background-color: rgba(47, 48, 58, 0.8);
+  }
 
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.143;
-  text-align: center;
-  text-transform: uppercase;
+  &__text {
+    color: $color-text-white;
+
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.143;
+    text-align: center;
+    text-transform: uppercase;
+  }
 }
