--- a/sass/components/modal/_checkbox.scss
+++ b/sass/components/modal/_checkbox.scss
@@ -11,6 +11,7 @@
 }
 
 .checkbox__icon {
+  flex-shrink: 0;
   width: 16px;
   height: 15px;
   outline: 2px solid $color-text-primary;
@@ -29,9 +30,14 @@
 }
 
 .checkbox__text {
-  font-size: 14px;
-  line-height: 1.71;
+  font-size: 12px;
+  line-height: 1.167;
   color: $color-text-secondary;
+
+  @media screen and (min-width: 1200px) {
+    font-size: 14px;
+    line-height: 1.71;
+  }
 }
 
 .checkbox__link {
