--- a/sass/components/modal/_form.scss
+++ b/sass/components/modal/_form.scss
@@ -6,10 +6,14 @@
   margin-bottom: 30px;
   font-weight: 700;
   font-size: 20px;
-  line-height: 1.15;
+  line-height: 1.5;
   text-align: center;
 
   color: $color-text-primary;
+
+  @media screen and (min-width: 1200px) {
+    line-height: 1.15;
+  }
 }
 
 .field {
