--- a/sass/components/modal/_modal-window.scss
+++ b/sass/components/modal/_modal-window.scss
@@ -4,10 +4,11 @@
   left: 0;
   width: 100%;
   height: 100%;
+  padding: 93px 15px;
   background-color: rgba(0, 0, 0, 0.2);
 
   opacity: 1;
-
+  overflow-y: scroll;
   transition: opacity $anim, visibility $anim;
 }
 
@@ -18,29 +19,45 @@
 }
 
 .modal {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%) scale(1);
-  max-width: 528px;
-  min-height: 581px;
+  position: relative;
+
+  transform: scale(1);
+
   padding: 40px;
   background-color: $color-text-white;
   transition: transform $anim;
 
   .is-hidden & {
-    transform: translate(-50%, -50%) scale(1.1);
+    transform: scale(1.1);
+
+    @media screen and (min-width: 480px) {
+      transform: translate(-50%, -50%) scale(1.1);
+    }
+  }
+
+  @media screen and (min-width: 480px) {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(1);
+    max-width: 450px;
+    width: 100%;
+    min-height: 609px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    max-width: 528px;
+    min-height: 581px;
   }
 }
 
 .close-btn {
   position: absolute;
-  top: 0;
-  right: 0;
+  top: 8px;
+  right: 8px;
   display: flex;
   align-items: center;
   justify-content: center;
-  transform: translate(50%, -50%);
   width: 30px;
   height: 30px;
   border: 1px solid rgba(0, 0, 0, 0.1);
@@ -48,6 +65,12 @@
   background-color: #fff;
 
   cursor: pointer;
+
+  @media screen and (min-width: 1200px) {
+    top: 0;
+    right: 0;
+    transform: translate(50%, -50%);
+  }
 }
 
 .close-btn__icon {
