--- a/sass/components/page-footer/_subscribe-form.scss
+++ b/sass/components/page-footer/_subscribe-form.scss
@@ -1,45 +1,55 @@
 .subscribe-form {
-  display: flex;
-  align-items: flex-end;
-}
-
-.page-footer__form {
-  margin-left: auto;
-}
-
-.subscribe-form__label {
-  display: block;
-  margin-bottom: 20px;
-
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.143;
-  text-transform: uppercase;
-
-  color: $color-text-white;
-}
-
-.subscribe-form__input {
-  width: 358px;
-  height: 50px;
-  padding: 15px 16px;
-
-  font-size: 16px;
-  line-height: 1.25;
-
-  background-color: $color-primary-grey;
-  color: $color-text-white;
-  outline: 1px solid transparent;
-  border: 1px solid rgba(255, 255, 255, 0.3);
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-  border-radius: 4px;
-  transition: outline-color $anim;
-
-  &:focus-within {
-    outline-color: #fff;
+  @media screen and (min-width: 1200px) {
+    display: flex;
+    align-items: flex-end;
   }
-}
 
-.subscribe-form__btn {
-  margin-left: 12px;
+  &__label {
+    display: block;
+    margin-bottom: 20px;
+
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.143;
+    text-transform: uppercase;
+
+    color: $color-text-white;
+  }
+
+  &__input {
+    display: block;
+    width: 100%;
+    height: 50px;
+    padding: 15px 16px;
+
+    font-size: 16px;
+    line-height: 1.25;
+
+    background-color: $color-primary-grey;
+    color: $color-text-white;
+    outline: 1px solid transparent;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+    border-radius: 4px;
+    transition: outline-color $anim;
+
+    &:focus-within {
+      outline-color: #fff;
+    }
+
+    @media screen and (max-width: 1199px) {
+      margin-bottom: 20px;
+      min-width: 450px;
+    }
+
+    @media screen and (min-width: 1200px) {
+      width: 358px;
+    }
+  }
+
+  &__btn {
+    @media screen and (min-width: 1200px) {
+      margin-left: 12px;
+    }
+  }
 }
