--- a/sass/components/page-header/_contacts.scss
+++ b/sass/components/page-header/_contacts.scss
@@ -1,32 +1,73 @@
 .contacts {
   display: flex;
-  margin-left: auto;
-  gap: 50px;
-  align-items: center;
-}
 
-.contacts__link {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 10px;
-  padding-top: 32px;
-  padding-bottom: 32px;
-
-  color: $color-text-secondary;
-
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-
-  transition: color $anim;
-
-  &:hover, &:focus {
-    color: $color-accent;
+  @media screen and (max-width: 767px) {
+    flex-direction: column-reverse;
   }
-}
 
-.contacts__icon {
-  fill: currentColor;
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    display: block;
+  }
+
+  @media screen and (min-width: 1200px) {
+    align-items: center;
+    gap: 50px;
+  }
+
+  &__link {
+    padding-top: 32px;
+    padding-bottom: 32px;
+
+    color: $color-text-secondary;
+
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+
+    transition: color $anim;
+
+    &:hover,
+    &:focus {
+      color: $color-accent;
+    }
+
+    @media screen and (max-width: 767px) {
+      display: block;
+      padding-top: 16px;
+      padding-bottom: 16px;
+      font-size: 24px;
+      line-height: 1.667;
+      letter-spacing: 0.02em;
+    }
+
+    @media screen and (min-width: 768px) {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      padding-top: 5px;
+      padding-bottom: 5px;
+
+      font-size: 12px;
+      line-height: 1.167;
+    }
+
+    &--accent {
+      @media screen and (max-width: 767px) {
+        color: $color-accent;
+        font-size: 34px;
+        line-height: 1.176;
+
+        letter-spacing: 0.02em;
+      }
+    }
+  }
+
+  &__icon {
+    fill: currentColor;
+
+    @media screen and (max-width: 767px) {
+      display: none;
+    }
+  }
 }
