--- a/sass/components/page-header/_navigation.scss
+++ b/sass/components/page-header/_navigation.scss
@@ -1,44 +1,68 @@
 .nav {
-  display: flex;
-  align-items: center;
-}
+  @media screen and (max-width: 767px) {
+    margin-bottom: auto;
+  }
 
-.nav__list {
-  @extend .card-set;
-  gap: 50px;
-}
+  @media screen and (min-width: 768px) {
+    display: flex;
+    align-items: center;
+  }
 
-.nav__link {
-  display: block;
-  padding-top: 32px;
-  padding-bottom: 32px;
+  &__list {
+    @media screen and (max-width: 767px) {
+      margin-top: -16px;
+    }
 
-  color: $color-text-primary;
+    @media screen and (min-width: 768px) {
+      width: 100%;
+      gap: 50px;
+    }
+  }
 
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
+  &__link {
+    display: block;
+    padding-top: 16px;
+    padding-bottom: 16px;
 
-  transition: color $anim;
+    font-weight: 500;
+    font-size: 40px;
+    line-height: 1.175;
+    letter-spacing: 0.02em;
 
-  &:hover, &:focus {
-    color: $color-accent;
+    color: $color-text-primary;
+
+    transition: color $anim;
+
+    &:hover,
+    &:focus {
+      color: $color-accent;
+    }
+
+    @media screen and (min-width: 768px) {
+      padding-top: 32px;
+      padding-bottom: 32px;
+
+      font-size: 14px;
+      line-height: 1.14;
+    }
   }
 }
 
 .nav__link--current {
-  position: relative;
   color: $color-accent;
 
-  &::after {
-    content: '';
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 4px;
-    border-radius: 2px;
-    background-color: $color-accent;
+  @media screen and (min-width: 768px) {
+    position: relative;
+
+    &::after {
+      content: '';
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      height: 4px;
+      border-radius: 2px;
+      background-color: $color-accent;
+    }
   }
 }
