--- a/css/main.css
+++ b/css/main.css
@@ -578,7 +578,7 @@ p {
 @media screen and (min-width: 1200px) {
   .contacts {
     align-items: center;
-    gap: 50px;
+    gap: 30px;
   }
 }
 .contacts__link {
@@ -586,8 +586,8 @@ p {
   padding-bottom: 32px;
   color: #757575;
   font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
+  padding-bottom: 16px;
+  font-size: 24px;
   letter-spacing: 0.02em;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -598,10 +598,7 @@ p {
   .contacts__link {
     display: block;
     padding-top: 16px;
-    padding-bottom: 16px;
-    font-size: 24px;
     line-height: 1.667;
-    letter-spacing: 0.02em;
   }
 }
 @media screen and (min-width: 768px) {
@@ -613,6 +610,12 @@ p {
     padding-bottom: 5px;
     font-size: 12px;
     line-height: 1.167;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .contacts__link {
+    font-size: 14px;
+    line-height: 1.143;
   }
 }
 @media screen and (max-width: 767px) {
