--- a/sass/components/page-header/_contacts.scss
+++ b/sass/components/page-header/_contacts.scss
@@ -11,7 +11,7 @@
 
   @media screen and (min-width: 1200px) {
     align-items: center;
-    gap: 50px;
+    gap: 30px;
   }
 
   &__link {
@@ -21,8 +21,8 @@
     color: $color-text-secondary;
 
     font-weight: 500;
-    font-size: 14px;
-    line-height: 1.14;
+    padding-bottom: 16px;
+    font-size: 24px;
     letter-spacing: 0.02em;
 
     transition: color $anim;
@@ -35,10 +35,8 @@
     @media screen and (max-width: 767px) {
       display: block;
       padding-top: 16px;
-      padding-bottom: 16px;
-      font-size: 24px;
+
       line-height: 1.667;
-      letter-spacing: 0.02em;
     }
 
     @media screen and (min-width: 768px) {
@@ -50,6 +48,11 @@
 
       font-size: 12px;
       line-height: 1.167;
+    }
+
+    @media screen and (min-width: 1200px) {
+      font-size: 14px;
+      line-height: 1.143;
     }
 
     &--accent {
