--- a/css/main.css
+++ b/css/main.css
@@ -586,7 +586,6 @@ p {
   padding-bottom: 32px;
   color: #757575;
   font-weight: 500;
-  padding-bottom: 16px;
   font-size: 24px;
   letter-spacing: 0.02em;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -598,6 +597,7 @@ p {
   .contacts__link {
     display: block;
     padding-top: 16px;
+    padding-bottom: 16px;
     line-height: 1.667;
   }
 }
@@ -693,8 +693,10 @@ p {
 
 .menu-socials {
   display: flex;
+  flex-wrap: wrap;
   margin-left: -10px;
   margin-right: -10px;
+  margin-top: 48px;
 }
 @media screen and (min-width: 768px) {
   .menu-socials {
@@ -1006,6 +1008,9 @@ p {
     justify-content: center;
     align-items: center;
     text-align: center;
+    max-width: 450px;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
 @media screen and (min-width: 1200px) {
@@ -1041,6 +1046,11 @@ p {
     align-items: flex-end;
   }
 }
+@media screen and (max-width: 1199px) {
+  .subscribe-form__field {
+    width: 100%;
+  }
+}
 .subscribe-form__label {
   display: block;
   margin-bottom: 20px;
@@ -1071,17 +1081,12 @@ p {
 @media screen and (max-width: 1199px) {
   .subscribe-form__input {
     margin-bottom: 20px;
-    min-width: 450px;
   }
 }
 @media screen and (min-width: 1200px) {
   .subscribe-form__input {
     width: 358px;
-  }
-}
-@media screen and (min-width: 1200px) {
-  .subscribe-form__btn {
-    margin-left: 12px;
+    margin-right: 12px;
   }
 }
 
