--- a/sass/components/page-footer/_page-footer.scss
+++ b/sass/components/page-footer/_page-footer.scss
@@ -57,6 +57,9 @@
       justify-content: center;
       align-items: center;
       text-align: center;
+      max-width: 450px;
+      margin-left: auto;
+      margin-right: auto;
     }
 
     @media screen and (min-width: 1200px) {
