--- a/sass/components/page-footer/_subscribe-form.scss
+++ b/sass/components/page-footer/_subscribe-form.scss
@@ -4,6 +4,12 @@
     align-items: flex-end;
   }
 
+  &__field {
+    @media screen and (max-width: 1199px) {
+      width: 100%;
+    }
+  }
+
   &__label {
     display: block;
     margin-bottom: 20px;
@@ -39,17 +45,11 @@
 
     @media screen and (max-width: 1199px) {
       margin-bottom: 20px;
-      min-width: 450px;
     }
 
     @media screen and (min-width: 1200px) {
       width: 358px;
-    }
-  }
-
-  &__btn {
-    @media screen and (min-width: 1200px) {
-      margin-left: 12px;
+      margin-right: 12px;
     }
   }
 }
