--- a/sass/components/page-header/_menu-socials.scss
+++ b/sass/components/page-header/_menu-socials.scss
@@ -1,7 +1,9 @@
 .menu-socials {
   display: flex;
+  flex-wrap: wrap;
   margin-left: -10px;
   margin-right: -10px;
+  margin-top: 48px;
 
   @media screen and (min-width: 768px) {
     display: none;
