--- a/css/main.css
+++ b/css/main.css
@@ -1428,9 +1428,16 @@ p {
 .filters {
   display: flex;
   flex-wrap: wrap;
-  margin-bottom: 40px;
   justify-content: start;
-  gap: 8px;
+  -moz-column-gap: 8px;
+       column-gap: 8px;
+  row-gap: 15px;
+  margin-bottom: 40px;
+}
+@media screen and (max-width: 767px) {
+  .filters {
+    padding-right: 20px;
+  }
 }
 @media screen and (min-width: 768px) {
   .filters {
@@ -1465,6 +1472,7 @@ p {
 .filters__button--active {
   color: #fff;
   background-color: #2196f3;
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 @media screen and (max-width: 767px) {
