--- a/sass/components/portfolio-page/_filter-buttons.scss
+++ b/sass/components/portfolio-page/_filter-buttons.scss
@@ -1,9 +1,14 @@
 .filters {
   display: flex;
   flex-wrap: wrap;
-  margin-bottom: 40px;
   justify-content: start;
-  gap: 8px;
+  column-gap: 8px;
+  row-gap: 15px;
+  margin-bottom: 40px;
+
+  @media screen and (max-width: 767px) {
+    padding-right: 20px;
+  }
 
   @media screen and (min-width: 768px) {
     justify-content: center;
@@ -44,6 +49,8 @@
     &--active {
       color: $color-text-white;
       background-color: $color-accent;
+      box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+        0px 2px 2px rgba(0, 0, 0, 0.12);
     }
   }
 }
