--- a/css/main.css
+++ b/css/main.css
@@ -694,6 +694,7 @@ p {
 .menu-socials {
   display: flex;
   flex-wrap: wrap;
+  row-gap: 16px;
   margin-left: -10px;
   margin-right: -10px;
   margin-top: 48px;
@@ -727,8 +728,7 @@ p {
 .hero__container {
   margin-left: auto;
   margin-right: auto;
-  padding-top: 118px;
-  padding-bottom: 118px;
+  padding: 188px 15px;
   max-width: 768px;
   background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero/hero-background-mobile.jpg);
   background-position: center;
