--- a/sass/components/main-page/_hero-section.scss
+++ b/sass/components/main-page/_hero-section.scss
@@ -5,8 +5,7 @@
   &__container {
     margin-left: auto;
     margin-right: auto;
-    padding-top: 118px;
-    padding-bottom: 118px;
+    padding: 188px 15px;
     max-width: 768px;
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
       url(../images/hero/hero-background-mobile.jpg);
