--- a/sass/components/page-header/_menu-socials.scss
+++ b/sass/components/page-header/_menu-socials.scss
@@ -1,6 +1,7 @@
 .menu-socials {
   display: flex;
   flex-wrap: wrap;
+  row-gap: 16px;
   margin-left: -10px;
   margin-right: -10px;
   margin-top: 48px;
