--- a/sass/components/main-page/_benefits-section.scss
+++ b/sass/components/main-page/_benefits-section.scss
@@ -23,9 +23,9 @@
     border-radius: 4px;
     height: 120px;
     width: 100%;
-    background-color: $color-background-white;
+    background-color: var(--color-background-white);
 
-    transition: box-shadow $anim;
+    transition: box-shadow var(--anim);
 
     .benefits__item:hover &,
     .benefits__item:focus & {
@@ -49,7 +49,7 @@
   }
 
   &__text {
-    color: $color-text-secondary;
+    color: var(--color-text-secondary);
 
     font-size: 14px;
     line-height: 1.714;
