--- a/sass/components/main-page/_clients-section.scss
+++ b/sass/components/main-page/_clients-section.scss
@@ -9,6 +9,7 @@
 .clients__list {
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
   gap: 30px;
 }
 
@@ -35,16 +36,16 @@
   justify-content: center;
   width: 100%;
   height: 100%;
-  color: $color-icon-inactive;
-  border: 1px solid $color-icon-inactive;
+  color: var(--color-icon-inactive);
+  border: 1px solid var(--color-icon-inactive);
   border-radius: 4px;
 
-  transition: color $anim, border-color $anim;
+  transition: color var(--anim), border-color var(--anim);
 
   &:hover,
   &:focus {
-    color: $color-accent;
-    border-color: $color-accent;
+    color: var(--color-accent);
+    border-color: var(--color-accent);
   }
 }
 
