--- a/sass/components/main-page/_hero-section.scss
+++ b/sass/components/main-page/_hero-section.scss
@@ -1,5 +1,5 @@
 .hero {
-  background-color: $color-primary-grey;
+  background-color: var(--color-primary-grey);
   text-align: center;
 
   &__container {
@@ -48,7 +48,7 @@
     margin-left: auto;
     margin-right: auto;
 
-    color: $color-text-white;
+    color: var(--color-text-white);
 
     font-weight: 900;
     font-size: 26px;
