--- a/sass/components/main-page/_team-section.scss
+++ b/sass/components/main-page/_team-section.scss
@@ -1,6 +1,6 @@
 .team {
   @extend %section;
-  background-color: $color-background-white;
+  background-color: var(--color-background-white);
 
   &__title {
     @extend %section-title;
@@ -8,7 +8,7 @@
 
   &__item {
     padding-bottom: 24px;
-    background-color: $color-text-white;
+    background-color: var(--color-text-white);
     text-align: center;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
       0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -47,7 +47,7 @@
 
   &__position {
     margin-bottom: 16px;
-    color: $color-text-secondary;
+    color: var(--color-text-secondary);
 
     font-size: 16px;
     line-height: 1.188;
