--- a/sass/components/main-page/_work-section.scss
+++ b/sass/components/main-page/_work-section.scss
@@ -29,7 +29,7 @@
   }
 
   &__text {
-    color: $color-text-white;
+    color: var(--color-text-white);
 
     font-weight: 700;
     font-size: 14px;
