--- a/sass/components/modal/_comments.scss
+++ b/sass/components/modal/_comments.scss
@@ -13,11 +13,11 @@
   font-size: 14px;
   line-height: 1.167;
   letter-spacing: 0.01em;
-  color: $color-text-primary;
-  transition: border $anim;
+  color: var(--color-text-primary);
+  transition: border var(--anim);
 
   .comments-field:focus-within & {
-    border: 1px solid $color-accent;
+    border: 1px solid var(--color-accent);
     outline: 1px solid transparent;
   }
 
@@ -28,7 +28,7 @@
 
     color: rgba(117, 117, 117, 0.5);
     opacity: 0;
-    transition: opacity $anim;
+    transition: opacity var(--anim);
 
     .comments-field:focus-within & {
       opacity: 1;
@@ -44,9 +44,9 @@
   line-height: 1.167;
   letter-spacing: 0.01em;
 
-  color: $color-text-secondary;
+  color: var(--color-text-secondary);
   transform: translate(0) scale(1.2);
-  transition: transform $anim;
+  transition: transform var(--anim);
 
   .comments-field:focus-within & {
     transform: translate(-24px, -210%) scale(1);
