--- a/sass/components/page-footer/_page-footer.scss
+++ b/sass/components/page-footer/_page-footer.scss
@@ -1,5 +1,5 @@
 .page-footer {
-  background-color: $color-primary-grey;
+  background-color: var(--color-primary-grey);
   padding-top: 60px;
   padding-bottom: 60px;
 
