--- a/sass/components/page-header/_menu-socials.scss
+++ b/sass/components/page-header/_menu-socials.scss
@@ -24,7 +24,7 @@
     font-size: 18px;
     line-height: 1.222;
     letter-spacing: 0.02em;
-    color: $color-accent;
+    color: var(--color-accent);
 
     &:not(:last-child) {
       border-right: 1px solid rgba(33, 33, 33, 0.2);
