--- a/sass/components/page-header/_navigation.scss
+++ b/sass/components/page-header/_navigation.scss
@@ -29,13 +29,13 @@
     line-height: 1.175;
     letter-spacing: 0.02em;
 
-    color: $color-text-primary;
+    color: var(--color-text-primary);
 
-    transition: color $anim;
+    transition: color var(--anim);
 
     &:hover,
     &:focus {
-      color: $color-accent;
+      color: var(--color-accent);
     }
 
     @media screen and (min-width: 768px) {
@@ -49,7 +49,7 @@
 }
 
 .nav__link--current {
-  color: $color-accent;
+  color: var(--color-accent);
 
   @media screen and (min-width: 768px) {
     position: relative;
@@ -62,7 +62,7 @@
       width: 100%;
       height: 4px;
       border-radius: 2px;
-      background-color: $color-accent;
+      background-color: var(--color-accent);
     }
   }
 }
