--- a/sass/components/portfolio-page/_filter-buttons.scss
+++ b/sass/components/portfolio-page/_filter-buttons.scss
@@ -24,8 +24,8 @@
     border-radius: 4px;
     border: 1px solid transparent;
 
-    color: $color-text-primary;
-    background-color: $color-background-white;
+    color: var(--color-text-primary);
+    background-color: var(--color-background-white);
 
     font-family: inherit;
     font-weight: 500;
@@ -35,20 +35,20 @@
 
     cursor: pointer;
 
-    transition: background-color $anim, box-shadow $anim, color $anim;
+    transition: background-color var(--anim), box-shadow var(--anim), color var(--anim);
 
     &:hover,
     &:focus,
     &:active {
-      color: $color-text-white;
-      background-color: $color-accent;
+      color: var(--color-text-white);
+      background-color: var(--color-accent);
       box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
         0px 2px 2px rgba(0, 0, 0, 0.12);
     }
 
     &--active {
-      color: $color-text-white;
-      background-color: $color-accent;
+      color: var(--color-text-white);
+      background-color: var(--color-accent);
       box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
         0px 2px 2px rgba(0, 0, 0, 0.12);
     }
