--- a/sass/utils/_button.scss
+++ b/sass/utils/_button.scss
@@ -7,8 +7,8 @@
   height: 50px;
   border-radius: 4px;
   border: 1px solid transparent;
-  color: $color-text-white;
-  background-color: $color-accent;
+  color: var(--color-text-white);
+  background-color: var(--color-accent);
 
   font-family: inherit;
   font-weight: 700;
@@ -19,13 +19,13 @@
 
   cursor: pointer;
 
-  transition: background-color $anim;
+  transition: background-color var(--anim);
 
   &:hover, &:focus {
-    background-color: $color-button-hover;
+    background-color: var(--color-button-hover);
   }
 }
 
 .button__icon {
-  fill: $color-text-white;
+  fill: var(--color-text-white);
 }
