--- a/sass/utils/_social-links.scss
+++ b/sass/utils/_social-links.scss
@@ -11,14 +11,14 @@
   width: 44px;
   height: 44px;
   border-radius: 50%;
-  color: $color-icon-inactive;
+  color: var(--color-icon-inactive);
 
-  transition: color $anim, background-color $anim;
+  transition: color var(--anim), background-color var(--anim);
 
   &:hover,
   &:focus {
-    background-color: $color-accent;
-    color: $color-text-white;
+    background-color: var(--color-accent);
+    color: var(--color-text-white);
   }
 }
 
@@ -32,7 +32,7 @@
   font-size: 14px;
   line-height: 1.142;
   text-transform: uppercase;
-  color: $color-text-white;
+  color: var(--color-text-white);
 }
 
 .socials__link--basement {
@@ -40,5 +40,5 @@
 }
 
 .socials__icon--basement {
-  fill: $color-text-white;
+  fill: var(--color-text-white);
 }
