manage sass files

--- a/sass/layout/main-page/_benefits-section.scss
+++ b/sass/layout/main-page/_benefits-section.scss
@@ -1,6 +1,10 @@
 .benefits {
   @extend %section;
 
+  &__title {
+    @include visually-hidden;
+  }
+
   .benefits__item {
     &:not(:last-child) {
       margin-bottom: 30px;
