--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -1,4 +1,4 @@
-.visually-hidden {
+@mixin visually-hidden {
   position: absolute;
   width: 1px;
   height: 1px;
@@ -10,4 +10,8 @@
   clip-path: inset(100%);
   clip: rect(0 0 0 0);
   overflow: hidden;
+}
+
+@mixin flex-based($items, $indent) {
+  flex-basis: calc((100% - $indent * ($items - 1)) / $items);
 }
