--- a/sass/layout/portfolio-page/_examples.scss
+++ b/sass/layout/portfolio-page/_examples.scss
@@ -1,58 +1,55 @@
 .examples {
-  @media screen and (max-width: 767px) {
-    &__item:not(:last-child) {
-      margin-bottom: 30px;
+  &__item {
+    @include flex-based(1);
+
+    @include mq(tab) {
+      @include flex-based(2);
+    }
+
+    @include mq(desk) {
+      @include flex-based(3);
     }
   }
+}
 
-  &__link {
-    display: block;
-    transition: box-shadow var(--anim);
-    &:hover,
-    &:focus {
-      box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-        1px 4px 6px rgba(0, 0, 0, 0.16);
-    }
+.examples__link {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  transition: box-shadow var(--anim);
+  &:hover,
+  &:focus {
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+      1px 4px 6px rgba(0, 0, 0, 0.16);
   }
+}
 
-  &__wrapper {
-    position: relative;
-    overflow: hidden;
-  }
+.examples__wrapper {
+  position: relative;
+  overflow: hidden;
+}
 
-  &__inner {
-    padding: 20px 24px;
-    border: 1px solid var(--color-box-border);
-    border-top: none;
+.examples__inner {
+  flex-grow: 1;
+  padding: 20px 24px;
+  border: 1px solid var(--color-box-border);
+  border-top: none;
+}
 
-    @media screen and (min-width: 768px) and (max-width: 1199px) {
-      &--first {
-        height: 147px;
-      }
-    }
-  }
+.examples__subtitle {
+  margin-bottom: 4px;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2;
 
-  &__subtitle {
-    margin-bottom: 4px;
-    font-weight: 700;
-    font-size: 18px;
-    line-height: 2;
+  letter-spacing: 0.06em;
+}
 
-    letter-spacing: 0.06em;
+.examples__filter-name {
+  margin-top: 0;
+  margin-bottom: 0;
+  color: var(--color-text-secondary);
 
-    &--divided {
-      @media screen and (min-width: 768px) and (max-width: 1199px) {
-        width: 304px;
-      }
-    }
-  }
-
-  &__filter-name {
-    margin-top: 0;
-    margin-bottom: 0;
-    color: var(--color-text-secondary);
-
-    font-size: 16px;
-    line-height: 1.875;
-  }
+  font-size: 16px;
+  line-height: 1.875;
 }
