--- a/css/main.css
+++ b/css/main.css
@@ -326,6 +326,20 @@ p {
   }
 }
 
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  -webkit-clip-path: inset(100%);
+          clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
 .button {
   display: inline-flex;
   justify-content: center;
@@ -354,30 +368,28 @@ p {
   fill: var(--color-text-white);
 }
 
-@media screen and (min-width: 768px) {
-  .card-set {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 30px;
-  }
+.card-set {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 30px;
 }
 
-.container, .page-footer__container, .page-header__container {
+.container, .page-footer .page-footer__container, .page-header__container {
   padding: 0 15px;
   margin: 0 auto;
 }
 @media screen and (min-width: 480px) {
-  .container, .page-footer__container, .page-header__container {
+  .container, .page-footer .page-footer__container, .page-header__container {
     width: 480px;
   }
 }
 @media screen and (min-width: 768px) {
-  .container, .page-footer__container, .page-header__container {
+  .container, .page-footer .page-footer__container, .page-header__container {
     width: 768px;
   }
 }
 @media screen and (min-width: 1200px) {
-  .container, .page-footer__container, .page-header__container {
+  .container, .page-footer .page-footer__container, .page-header__container {
     width: 1200px;
   }
 }
@@ -410,7 +422,7 @@ p {
   width: 100%;
   height: 100%;
   bottom: 0;
-  transform: translateY(100%);
+  transform: translateY(101%);
   transition: transform var(--anim);
   background-color: var(--color-accent-tranparent);
 }
@@ -805,12 +817,12 @@ p {
 .contacts {
   display: flex;
 }
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 767.98px) {
   .contacts {
     flex-direction: column-reverse;
   }
 }
-@media screen and (min-width: 768px) and (max-width: 1199px) {
+@media screen and (min-width: 768px) and (max-width: 1199.98px) {
   .contacts {
     display: block;
   }
@@ -821,6 +833,7 @@ p {
     gap: 30px;
   }
 }
+
 .contacts__link {
   padding-top: 32px;
   padding-bottom: 32px;
@@ -833,7 +846,7 @@ p {
 .contacts__link:hover, .contacts__link:focus {
   color: var(--color-accent);
 }
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 767.98px) {
   .contacts__link {
     display: block;
     padding-top: 16px;
@@ -858,7 +871,13 @@ p {
     line-height: 1.143;
   }
 }
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 400px) {
+  .contacts__link--accent {
+    color: var(--color-accent);
+    font-size: 25px;
+  }
+}
+@media screen and (min-width: 401px) and (max-width: 767px) {
   .contacts__link--accent {
     color: var(--color-accent);
     font-size: 34px;
@@ -866,12 +885,19 @@ p {
     letter-spacing: 0.02em;
   }
 }
+
 .contacts__icon {
   fill: currentColor;
 }
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 767.98px) {
   .contacts__icon {
     display: none;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 1199.98px) {
+  .contacts__icon {
+    width: 14px;
+    height: 14px;
   }
 }
 
@@ -908,7 +934,7 @@ p {
 .menu {
   display: flex;
 }
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 767.98px) {
   .menu {
     position: fixed;
     top: 0;
@@ -937,9 +963,11 @@ p {
     width: 100%;
   }
 }
+
 .menu__icon {
   fill: currentColor;
 }
+
 .menu__button {
   display: inline-flex;
   padding: 0;
@@ -961,7 +989,7 @@ p {
   right: 15px;
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 767.98px) {
   .nav {
     margin-bottom: auto;
   }
@@ -972,9 +1000,10 @@ p {
     align-items: center;
   }
 }
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 767.98px) {
   .nav__list {
     margin-top: -16px;
+    flex-direction: column;
   }
 }
 @media screen and (min-width: 768px) {
@@ -983,6 +1012,7 @@ p {
     gap: 50px;
   }
 }
+
 .nav__link {
   display: block;
   padding-top: 16px;
@@ -1005,7 +1035,6 @@ p {
     line-height: 1.14;
   }
 }
-
 .nav__link--current {
   color: var(--color-accent);
 }
@@ -1028,30 +1057,33 @@ p {
 .page-header {
   border-bottom: 1px solid #ececec;
 }
+
 .page-header__container {
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 767.98px) {
   .page-header__container {
     position: relative;
   }
 }
+
 .page-header__logo {
   padding-top: 16px;
   padding-bottom: 16px;
-}
-@media screen and (min-width: 1200px) {
-  .page-header__logo {
-    margin-right: 93px;
-  }
 }
 @media screen and (min-width: 768px) {
   .page-header__logo {
     margin-right: 88px;
   }
 }
+@media screen and (min-width: 1200px) {
+  .page-header__logo {
+    margin-right: 93px;
+  }
+}
+
 .page-header__menu-socials {
   margin-top: 64px;
 }
@@ -1060,6 +1092,7 @@ p {
   background-color: var(--color-primary-grey);
   text-align: center;
 }
+
 .hero__container {
   margin-left: auto;
   margin-right: auto;
@@ -1075,12 +1108,12 @@ p {
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero/hero-background-mobile@2x.jpg);
   }
 }
-@media screen and (min-width: 767px) {
+@media screen and (min-width: 768px) {
   .hero__container {
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero/hero-background-tablet.jpg);
   }
 }
-@media screen and (min-width: 767px) and (min-device-pixel-ratio: 2), screen and (min-width: 767px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 767px) and (min-resolution: 192dpi), screen and (min-width: 767px) and (min-resolution: 2dppx) {
+@media screen and (min-width: 768px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (min-resolution: 2dppx) {
   .hero__container {
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero/hero-background-tablet@2x.jpg);
   }
@@ -1098,6 +1131,7 @@ p {
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero/hero-background-desktop@2x.jpg);
   }
 }
+
 .hero__title {
   max-width: 360px;
   margin-bottom: 30px;
@@ -1119,32 +1153,20 @@ p {
   }
 }
 
-.benefits__title {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  border: 0;
-  padding: 0;
-  white-space: nowrap;
-  -webkit-clip-path: inset(100%);
-          clip-path: inset(100%);
-  clip: rect(0 0 0 0);
-  overflow: hidden;
-}
-.benefits .benefits__item:not(:last-child) {
+.benefits__item:not(:last-child) {
   margin-bottom: 30px;
 }
 @media screen and (min-width: 768px) {
-  .benefits .benefits__item {
+  .benefits__item {
     flex-basis: calc((100% - 30px) / 2);
   }
 }
 @media screen and (min-width: 1200px) {
-  .benefits .benefits__item {
+  .benefits__item {
     flex-basis: calc((100% - 90px) / 4);
   }
 }
+
 .benefits__logo {
   display: flex;
   align-items: center;
@@ -1166,11 +1188,12 @@ p {
   line-height: 1.14;
   text-transform: uppercase;
 }
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 767.98px) {
   .benefits__subtitle {
     text-align: center;
   }
 }
+
 .benefits__text {
   color: var(--color-text-secondary);
   font-size: 14px;
@@ -1180,7 +1203,7 @@ p {
 .work {
   padding-top: 0;
 }
-@media screen and (max-width: 1199px) {
+@media screen and (max-width: 1199.98px) {
   .work {
     display: none;
   }
@@ -1189,6 +1212,7 @@ p {
   position: relative;
   flex-basis: calc((100% - 60px) / 3);
 }
+
 .work__wrapper {
   position: absolute;
   display: flex;
@@ -1200,6 +1224,7 @@ p {
   width: 100%;
   background-color: rgba(47, 48, 58, 0.8);
 }
+
 .work__text {
   color: var(--color-text-white);
   font-weight: 700;
@@ -1213,16 +1238,12 @@ p {
   background-color: var(--color-background-white);
 }
 .team__item {
+  flex-basis: calc((100% - 0px) / 1);
   padding-bottom: 24px;
   background-color: var(--color-text-white);
   text-align: center;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
-}
-@media screen and (max-width: 767px) {
-  .team__item:not(:last-child) {
-    margin-bottom: 30px;
-  }
 }
 @media screen and (min-width: 768px) {
   .team__item {
@@ -1235,20 +1256,18 @@ p {
     padding-bottom: 30px;
   }
 }
+
 .team__img {
   margin-bottom: 30px;
 }
-@media screen and (min-width: 480px) {
-  .team__img {
-    width: 450px;
-  }
-}
+
 .team__name {
   margin-bottom: 10px;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.188;
 }
+
 .team__position {
   margin-bottom: 16px;
   color: var(--color-text-secondary);
@@ -1263,22 +1282,18 @@ p {
   gap: 30px;
 }
 
-@media screen and (max-width: 767px) {
-  .clients__item {
-    flex-basis: calc((100% - 30px) / 2);
-    height: 92px;
-  }
+.clients__item {
+  flex-basis: calc((100% - 30px) / 2);
+  height: 92px;
 }
 @media screen and (min-width: 768px) {
   .clients__item {
     flex-basis: calc((100% - 60px) / 3);
-    height: 92px;
   }
 }
 @media screen and (min-width: 1200px) {
   .clients__item {
     flex-basis: calc((100% - 150px) / 6);
-    height: 92px;
   }
 }
 
@@ -1302,32 +1317,42 @@ p {
   fill: currentColor;
 }
 
-@media screen and (max-width: 767px) {
-  .examples__item:not(:last-child) {
-    margin-bottom: 30px;
+.examples__item {
+  flex-basis: calc((100% - 0px) / 1);
+}
+@media screen and (min-width: 768px) {
+  .examples__item {
+    flex-basis: calc((100% - 30px) / 2);
   }
 }
+@media screen and (min-width: 1200px) {
+  .examples__item {
+    flex-basis: calc((100% - 60px) / 3);
+  }
+}
+
 .examples__link {
-  display: block;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
   transition: box-shadow var(--anim);
 }
 .examples__link:hover, .examples__link:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
+
 .examples__wrapper {
   position: relative;
   overflow: hidden;
 }
+
 .examples__inner {
+  flex-grow: 1;
   padding: 20px 24px;
   border: 1px solid var(--color-box-border);
   border-top: none;
 }
-@media screen and (min-width: 768px) and (max-width: 1199px) {
-  .examples__inner--first {
-    height: 147px;
-  }
-}
+
 .examples__subtitle {
   margin-bottom: 4px;
   font-weight: 700;
@@ -1335,11 +1360,7 @@ p {
   line-height: 2;
   letter-spacing: 0.06em;
 }
-@media screen and (min-width: 768px) and (max-width: 1199px) {
-  .examples__subtitle--divided {
-    width: 304px;
-  }
-}
+
 .examples__filter-name {
   margin-top: 0;
   margin-bottom: 0;
@@ -1357,9 +1378,9 @@ p {
   row-gap: 15px;
   margin-bottom: 40px;
 }
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 767.98px) {
   .filters {
-    padding-right: 20px;
+    max-width: 350px;
   }
 }
 @media screen and (min-width: 768px) {
@@ -1373,17 +1394,18 @@ p {
     margin-bottom: 50px;
   }
 }
+
 .filters__button {
   padding: 6px 22px;
   border-radius: 4px;
-  border: 1px solid transparent;
+  border: none;
   color: var(--color-text-primary);
   background-color: var(--color-background-white);
   font-family: inherit;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.625;
-  text-align: center;
+  letter-spacing: 0.03em;
   cursor: pointer;
   transition: background-color var(--anim), box-shadow var(--anim), color var(--anim);
 }
@@ -1398,31 +1420,19 @@ p {
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
-.portfolio__title {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  border: 0;
-  padding: 0;
-  white-space: nowrap;
-  -webkit-clip-path: inset(100%);
-          clip-path: inset(100%);
-  clip: rect(0 0 0 0);
-  overflow: hidden;
-}
-
 .address {
   color: var(--color-text-white);
   font-style: normal;
   font-size: 14px;
   line-height: 1.714;
 }
+
 .address__list {
   display: flex;
   flex-direction: column;
   gap: 8px;
 }
+
 .address__link {
   color: rgba(255, 255, 255, 0.6);
   font-size: 14px;
@@ -1439,16 +1449,18 @@ p {
   padding-bottom: 60px;
 }
 @media screen and (min-width: 1200px) {
-  .page-footer__container {
+  .page-footer .page-footer__container {
     display: flex;
     align-items: center;
   }
 }
+
 .page-footer__logo {
   display: inline-block;
   margin-bottom: 20px;
 }
-@media screen and (max-width: 767px) {
+
+@media screen and (max-width: 767.98px) {
   .page-footer__wrapper {
     margin-bottom: 60px;
   }
@@ -1466,7 +1478,8 @@ p {
     gap: 70px;
   }
 }
-@media screen and (max-width: 1199px) {
+
+@media screen and (max-width: 1199.98px) {
   .page-footer__inner {
     margin-bottom: 60px;
     text-align: center;
@@ -1478,10 +1491,12 @@ p {
     flex-direction: column;
   }
 }
+
 .page-footer__address {
   margin-bottom: 8px;
 }
-@media screen and (max-width: 1199px) {
+
+@media screen and (max-width: 1199.98px) {
   .page-footer__form {
     display: flex;
     flex-direction: column;
@@ -1505,7 +1520,7 @@ p {
     align-items: flex-end;
   }
 }
-@media screen and (max-width: 1199px) {
+@media screen and (max-width: 1199.98px) {
   .subscribe-form__field {
     width: 100%;
   }
@@ -1537,7 +1552,7 @@ p {
 .subscribe-form__input:focus-within {
   outline-color: #fff;
 }
-@media screen and (max-width: 1199px) {
+@media screen and (max-width: 1199.98px) {
   .subscribe-form__input {
     margin-bottom: 20px;
   }
