--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -3,15 +3,15 @@
   margin: 0 auto;
   // outline: 1px solid tomato;
 
-  @media screen and (min-width: 480px) {
+  @include mq(mob) {
     width: 480px;
   }
 
-  @media screen and (min-width: 768px) {
+  @include mq(tab) {
     width: 768px;
   }
 
-  @media screen and (min-width: 1200px) {
+  @include mq(desk) {
     width: 1200px;
   }
 }
