--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -7,7 +7,7 @@
 
   text-decoration: none;
 
-  @media screen and (min-width: 1200px) {
+  @include mq(desk) {
     font-size: 26px;
     line-height: 1.19;
   }
