--- a/sass/components/modal/_checkbox.scss
+++ b/sass/components/modal/_checkbox.scss
@@ -34,7 +34,7 @@
   line-height: 1.167;
   color: var(--color-text-secondary);
 
-  @media screen and (min-width: 1200px) {
+  @include mq(desk) {
     font-size: 14px;
     line-height: 1.71;
   }
