--- a/sass/layout/main-page/_team-section.scss
+++ b/sass/layout/main-page/_team-section.scss
@@ -5,51 +5,42 @@
   &__title {
     @extend %section-title;
   }
+}
 
-  &__item {
-    padding-bottom: 24px;
-    background-color: var(--color-text-white);
-    text-align: center;
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-      0px 2px 1px rgba(0, 0, 0, 0.2);
-    border-radius: 0px 0px 4px 4px;
+.team__item {
+  @include flex-based(1);
+  padding-bottom: 24px;
+  background-color: var(--color-text-white);
+  text-align: center;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
 
-    @media screen and (max-width: 767px) {
-      &:not(:last-child) {
-        margin-bottom: 30px;
-      }
-    }
-
-    @media screen and (min-width: 768px) {
-      @include flex-based(2, 30px);
-    }
-
-    @media screen and (min-width: 1200px) {
-      @include flex-based(4, 30px);
-      padding-bottom: 30px;
-    }
+  @include mq(tab) {
+    @include flex-based(2);
   }
 
-  &__img {
-    margin-bottom: 30px;
-
-    @media screen and (min-width: 480px) {
-      width: 450px;
-    }
+  @include mq(desk) {
+    @include flex-based(4);
+    padding-bottom: 30px;
   }
+}
 
-  &__name {
-    margin-bottom: 10px;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.188;
-  }
+.team__img {
+  margin-bottom: 30px;
+}
 
-  &__position {
-    margin-bottom: 16px;
-    color: var(--color-text-secondary);
+.team__name {
+  margin-bottom: 10px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.188;
+}
 
-    font-size: 16px;
-    line-height: 1.188;
-  }
+.team__position {
+  margin-bottom: 16px;
+  color: var(--color-text-secondary);
+
+  font-size: 16px;
+  line-height: 1.188;
 }
