--- a/sass/layout/page-header/_contacts.scss
+++ b/sass/layout/page-header/_contacts.scss
@@ -1,76 +1,86 @@
 .contacts {
   display: flex;
 
-  @media screen and (max-width: 767px) {
+  @include mq(mob-only) {
     flex-direction: column-reverse;
   }
 
-  @media screen and (min-width: 768px) and (max-width: 1199px) {
+  @include mq(tab-only) {
     display: block;
   }
 
-  @media screen and (min-width: 1200px) {
+  @include mq(desk) {
     align-items: center;
     gap: 30px;
   }
+}
 
-  &__link {
-    padding-top: 32px;
-    padding-bottom: 32px;
+.contacts__link {
+  padding-top: 32px;
+  padding-bottom: 32px;
 
-    color: var(--color-text-secondary);
+  color: var(--color-text-secondary);
 
-    font-weight: 500;
-    font-size: 24px;
-    letter-spacing: 0.02em;
+  font-weight: 500;
+  font-size: 24px;
+  letter-spacing: 0.02em;
 
-    transition: color var(--anim);
+  transition: color var(--anim);
 
-    &:hover,
-    &:focus {
-      color: var(--color-accent);
-    }
-
-    @media screen and (max-width: 767px) {
-      display: block;
-      padding-top: 16px;
-      padding-bottom: 16px;
-
-      line-height: 1.667;
-    }
-
-    @media screen and (min-width: 768px) {
-      display: flex;
-      align-items: center;
-      gap: 10px;
-      padding-top: 5px;
-      padding-bottom: 5px;
-
-      font-size: 12px;
-      line-height: 1.167;
-    }
-
-    @media screen and (min-width: 1200px) {
-      font-size: 14px;
-      line-height: 1.143;
-    }
-
-    &--accent {
-      @media screen and (max-width: 767px) {
-        color: var(--color-accent);
-        font-size: 34px;
-        line-height: 1.176;
-
-        letter-spacing: 0.02em;
-      }
-    }
+  &:hover,
+  &:focus {
+    color: var(--color-accent);
   }
 
-  &__icon {
-    fill: currentColor;
+  @include mq(mob-only) {
+    display: block;
+    padding-top: 16px;
+    padding-bottom: 16px;
 
-    @media screen and (max-width: 767px) {
-      display: none;
+    line-height: 1.667;
+  }
+
+  @include mq(tab) {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+
+    font-size: 12px;
+    line-height: 1.167;
+  }
+
+  @include mq(desk) {
+    font-size: 14px;
+    line-height: 1.143;
+  }
+
+  &--accent {
+    @media screen and (max-width: 400px) {
+      color: var(--color-accent);
+      font-size: 25px;
     }
+
+    @media screen and (min-width: 401px) and (max-width: 767px) {
+      color: var(--color-accent);
+      font-size: 34px;
+      line-height: 1.176;
+
+      letter-spacing: 0.02em;
+    }
+  }
+}
+
+.contacts__icon {
+  fill: currentColor;
+
+  @include mq(mob-only) {
+    display: none;
+  }
+
+  @include mq(tab-only) {
+    width: 14px;
+    height: 14px;
   }
 }
