--- a/sass/layout/page-header/_menu-socials.scss
+++ b/sass/layout/page-header/_menu-socials.scss
@@ -6,7 +6,7 @@
   margin-right: -10px;
   margin-top: 48px;
 
-  @media screen and (min-width: 768px) {
+  @include mq(tab) {
     display: none;
   }
 
