--- a/sass/layout/page-header/_menu.scss
+++ b/sass/layout/page-header/_menu.scss
@@ -1,6 +1,6 @@
 .menu {
   display: flex;
-  @media screen and (max-width: 767px) {
+  @include mq(mob-only) {
     position: fixed;
     top: 0;
     left: 0;
@@ -24,36 +24,37 @@
       transform: translate(0);
     }
   }
-  @media screen and (min-width: 768px) {
+
+  @include mq(tab) {
     justify-content: space-between;
     align-items: center;
     width: 100%;
   }
+}
 
-  &__icon {
-    fill: currentColor;
+.menu__icon {
+  fill: currentColor;
+}
+
+.menu__button {
+  display: inline-flex;
+  padding: 0;
+  margin: 0;
+  border: 0;
+  background-color: transparent;
+
+  &:hover,
+  &:focus {
+    color: var(--color-accent);
   }
 
-  &__button {
-    display: inline-flex;
-    padding: 0;
-    margin: 0;
-    border: 0;
-    background-color: transparent;
+  @include mq(tab) {
+    display: none;
+  }
 
-    &:hover,
-    &:focus {
-      color: var(--color-accent);
-    }
-
-    @media screen and (min-width: 768px) {
-      display: none;
-    }
-
-    &--cross {
-      position: absolute;
-      top: 10px;
-      right: 15px;
-    }
+  &--cross {
+    position: absolute;
+    top: 10px;
+    right: 15px;
   }
 }
