--- a/sass/layout/page-header/_navigation.scss
+++ b/sass/layout/page-header/_navigation.scss
@@ -1,68 +1,68 @@
 .nav {
-  @media screen and (max-width: 767px) {
+  @include mq(mob-only) {
     margin-bottom: auto;
   }
 
-  @media screen and (min-width: 768px) {
+  @include mq(tab) {
     display: flex;
     align-items: center;
   }
 
   &__list {
-    @media screen and (max-width: 767px) {
+    @include mq(mob-only) {
       margin-top: -16px;
+      flex-direction: column;
     }
 
-    @media screen and (min-width: 768px) {
+    @include mq(tab) {
       width: 100%;
       gap: 50px;
     }
   }
-
-  &__link {
-    display: block;
-    padding-top: 16px;
-    padding-bottom: 16px;
-
-    font-weight: 500;
-    font-size: 40px;
-    line-height: 1.175;
-    letter-spacing: 0.02em;
-
-    color: var(--color-text-primary);
-
-    transition: color var(--anim);
-
-    &:hover,
-    &:focus {
-      color: var(--color-accent);
-    }
-
-    @media screen and (min-width: 768px) {
-      padding-top: 32px;
-      padding-bottom: 32px;
-
-      font-size: 14px;
-      line-height: 1.14;
-    }
-  }
 }
+.nav__link {
+  display: block;
+  padding-top: 16px;
+  padding-bottom: 16px;
 
-.nav__link--current {
-  color: var(--color-accent);
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 1.175;
+  letter-spacing: 0.02em;
 
-  @media screen and (min-width: 768px) {
-    position: relative;
+  color: var(--color-text-primary);
 
-    &::after {
-      content: '';
-      position: absolute;
-      bottom: 0;
-      left: 0;
-      width: 100%;
-      height: 4px;
-      border-radius: 2px;
-      background-color: var(--color-accent);
+  transition: color var(--anim);
+
+  &:hover,
+  &:focus {
+    color: var(--color-accent);
+  }
+
+  @include mq(tab) {
+    padding-top: 32px;
+    padding-bottom: 32px;
+
+    font-size: 14px;
+    line-height: 1.14;
+  }
+
+  &--current {
+    color: var(--color-accent);
+
+    @include mq(tab) {
+      position: relative;
+
+      &::after {
+        content: '';
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        height: 4px;
+        border-radius: 2px;
+        background-color: var(--color-accent);
+      }
     }
   }
 }
