--- a/sass/layout/portfolio-page/_filter-buttons.scss
+++ b/sass/layout/portfolio-page/_filter-buttons.scss
@@ -6,51 +6,51 @@
   row-gap: 15px;
   margin-bottom: 40px;
 
-  @media screen and (max-width: 767px) {
-    padding-right: 20px;
+  @include mq(mob-only) {
+    max-width: 350px;
   }
 
-  @media screen and (min-width: 768px) {
+  @include mq(tab) {
     justify-content: center;
     margin-bottom: 30px;
   }
 
-  @media screen and (min-width: 1200px) {
+  @include mq(desk) {
     margin-bottom: 50px;
   }
+}
 
-  &__button {
-    padding: 6px 22px;
-    border-radius: 4px;
-    border: 1px solid transparent;
+.filters__button {
+  padding: 6px 22px;
+  border-radius: 4px;
+  border: none;
 
-    color: var(--color-text-primary);
-    background-color: var(--color-background-white);
+  color: var(--color-text-primary);
+  background-color: var(--color-background-white);
 
-    font-family: inherit;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.625;
-    text-align: center;
+  font-family: inherit;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.625;
+  letter-spacing: 0.03em;
 
-    cursor: pointer;
+  cursor: pointer;
 
-    transition: background-color var(--anim), box-shadow var(--anim), color var(--anim);
+  transition: background-color var(--anim), box-shadow var(--anim), color var(--anim);
 
-    &:hover,
-    &:focus,
-    &:active {
-      color: var(--color-text-white);
-      background-color: var(--color-accent);
-      box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-        0px 2px 2px rgba(0, 0, 0, 0.12);
-    }
+  &:hover,
+  &:focus,
+  &:active {
+    color: var(--color-text-white);
+    background-color: var(--color-accent);
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+      0px 2px 2px rgba(0, 0, 0, 0.12);
+  }
 
-    &--active {
-      color: var(--color-text-white);
-      background-color: var(--color-accent);
-      box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-        0px 2px 2px rgba(0, 0, 0, 0.12);
-    }
+  &--active {
+    color: var(--color-text-white);
+    background-color: var(--color-accent);
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+      0px 2px 2px rgba(0, 0, 0, 0.12);
   }
 }
