--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,7 +1,8 @@
 @import './base/modern-normalize';
 
-@import './utils/variables';
 @import './utils/mixins';
+@import './utils/variables';
+@import './utils/visually-hidden';
 
 @import './components/button';
 @import './components/card-set';
