--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -1,17 +1,45 @@
-@mixin visually-hidden {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  border: 0;
-  padding: 0;
-
-  white-space: nowrap;
-  clip-path: inset(100%);
-  clip: rect(0 0 0 0);
-  overflow: hidden;
+@mixin flex-based($items, $indent: 30px) {
+  flex-basis: calc((100% - $indent * ($items - 1)) / $items);
 }
 
-@mixin flex-based($items, $indent) {
-  flex-basis: calc((100% - $indent * ($items - 1)) / $items);
+@mixin mq($type) {
+  $mob: 480px;
+  $tab: 768px;
+  $desk: 1200px;
+
+  @if $type == mob-only {
+    @media screen and (max-width: ($tab - 0.02)) {
+      @content;
+    }
+  }
+
+  @if $type == mob {
+    @media screen and (min-width: $mob) {
+      @content;
+    }
+  }
+
+  @if $type == tab {
+    @media screen and (min-width: $tab) {
+      @content;
+    }
+  }
+
+  @if $type == tab-only {
+    @media screen and (min-width: $tab) and (max-width: ($desk - 0.02)) {
+      @content;
+    }
+  }
+
+  @if $type == desk {
+    @media screen and (min-width: $desk) {
+      @content;
+    }
+  }
+
+  @if $type == no-desk {
+    @media screen and (max-width: ($desk - 0.02)) {
+      @content;
+    }
+  }
 }
