--- a/sass/components/_overlay.scss
+++ b/sass/components/_overlay.scss
@@ -6,6 +6,7 @@
   width: 100%;
   height: 100%;
   bottom: 0;
+  padding: 0 24px;
 
   transform: translateY(101%);
 
@@ -18,10 +19,12 @@
   }
 
   &__text {
-    width: 322px;
-    height: 168px;
     font-size: 18px;
     line-height: 1.56;
     color: var(--color-text-white);
+
+    @media screen and (max-width: 400px) {
+      font-size: 14px;
+    }
   }
 }
